--- a/PWBD.html
+++ b/PWBD.html
@@ -226,11 +226,11 @@
 	</div>
 
 	<div class="row iframe">
-	  <div class="col-lg-6 col-md-6 d-flex align-items-stretch">
+	  <div class="col-lg-8 col-md-8 d-flex align-items-stretch">
 	   <iframe src="ChooseGuide.html" width="100%" title="Choose your guide application"></iframe>
 	  </div>
-	  <div class="col-lg-6 col-md-6 d-flex <!--align-items-stretch"-->>
-	   <img src="assets/img/interaction/ChooseGuide.JPG" title="Choose your guide interaction schema" width="100%">
+	  <div class="col-lg-4 col-md-4 d-flex> <!--align-items-stretch"-->
+	   <img src="assets/img/interaction/ChooseGuide.JPG" title="Choose your guide interaction schema">
 	  </div>      
 	</div>
 	</br>
