--- a/PWBD.html
+++ b/PWBD.html
@@ -229,7 +229,7 @@
 	  <div class="col-lg-8 col-md-8 d-flex align-items-stretch">
 	   <iframe src="ChooseGuide.html" width="100%" title="Choose your guide application"></iframe>
 	  </div>
-	  <div class="col-lg-4 col-md-4 d-flex> <!--align-items-stretch"-->
+	  <div class="col-lg-4 col-md-4 d-flex align-items-stretch">
 	   <img src="assets/img/interaction/ChooseGuide.JPG" title="Choose your guide interaction schema">
 	  </div>      
 	</div>
@@ -245,7 +245,7 @@
 	</div>
 	<div class="row iframe">
 	  <div class="col-lg-6 col-md-6 d-flex align-items-stretch">
-	   <img src="assets/img/interaction/Share.jpg" width="100%" title="Share your Stories interaction schema">
+	   <img src="assets/img/interaction/Share.jpg" title="Share your Stories interaction schema">
 	  </div>
 	  <div class="col-lg-6 col-md-6 d-flex align-items-stretch">
 	   <iframe src="Share.html" title="Share your Stories application" width="100%"></iframe>
