--- a/PWBD.html
+++ b/PWBD.html
@@ -230,7 +230,7 @@
 	   <iframe src="ChooseGuide.html" width="100%" title="Choose your guide application"></iframe>
 	  </div>
 	  <div class="col-lg-6 col-md-6 d-flex align-items-stretch">
-	   <img src="assets/img/interaction/ChooseGuide.JPG" title="Choose your guide interaction schema">
+	   <img src="assets/img/interaction/ChooseGuide.JPG" title="Choose your guide interaction schema" width="100%">
 	  </div>      
 	</div>
 	</br>
@@ -243,9 +243,10 @@
 		  <h5></h5></br>
 	   </div>      
 	</div>
+
 	<div class="row iframe">
 	  <div class="col-lg-6 col-md-6 d-flex align-items-stretch">
-	   <img src="assets/img/interaction/Share.jpg" title="Share your Stories interaction schema">
+	   <img src="assets/img/interaction/Share.jpg" title="Share your Stories interaction schema" width="100%">
 	  </div>
 	  <div class="col-lg-6 col-md-6 d-flex align-items-stretch">
 	   <iframe src="Share.html" title="Share your Stories application" width="100%"></iframe>
