--- a/PWBD.html
+++ b/PWBD.html
@@ -227,7 +227,7 @@
 
 	<div class="row iframe">
 	  <div class="col-lg-7 col-md-7 d-flex align-items-stretch">
-	   <iframe src="ChooseGuide.html" title="Choose your guide application" width="100%" allow="fullscreen"></iframe>
+	   <iframe ondblclick="requestFullscreen()" src="ChooseGuide.html" title="Choose your guide application" width="100%" allow="fullscreen"></iframe>
 	  </div>
 	  <div class="col-lg-5 col-md-5 d-flex align-items-stretch">
 	   <img src="assets/img/interaction/ChooseGuide.JPG" title="Choose your guide interaction schema" width="100%" allow="fullscreen">
