--- a/index.html
+++ b/index.html
@@ -51,53 +51,8 @@
           <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
           <li><a class="nav-link scrollto" href="#about">About</a></li>
           <li><a class="nav-link scrollto" href="PWBD.html">Project Work Design Brief</a></li>
-          <!--li class="dropdown"><a href="PWBD.html"><span>Project Work Design Brief</span> <i class="bi bi-chevron-down"></i></a>
-            <ul>
-              <li class="dropdown"><a href="#"><span>Introduction</span> <i class="bi bi-chevron-right"></i></a>
-                <ul>
-                  <li class="dropdown"><a href="#">1. Context</a>
-                    <ul>
-                      <li><a href="#">(a) reference institution for your PW, with its institutional goals</a></li>
-                      <li><a href="#">(b) relevant CH assets (include raster images or/and panoramas)</a></li>
-                      <li><a href="#">(c) the location (in case of on-site application it will be the museum or monument)</a></li>
-                      <li><a href="#">(d) your target audience (with characteristics, motivations, capabilities and devices)</a></li>
-                    </ul>
-                  </li>
-                  <li class="dropdown"><a href="#">2. Concept</a>
-                    <ul>
-                      <li><a href="#">(a) conceptual map</a></li>
-                      <li><a href="#">(b) museological approach</a></li>
-                      <li><a href="#">(c) experience design (from the users perspective) (include a diagram)</a></li>
-                      <li><a href="#">(d) the specific CH topic you have selected as case study for your PW</a></li>
-                      <li><a href="#">(e) the chosen cognitive focus (among: 1.Attention-Distraction, 2.Language-Narrative, 3. Meaningfulness-Emotions-Empathy, 4. Authenticity perception, 5. Memory-Recall)</a></li>
-                    </ul>
-                  </li>
-                  <li><a href="#">3. Goals (cultural, cognitive, economic, educational etc.)</a></li>
-                  <li><a href="#">4. Requirements (to reach the goals)</a></li>               
-                </ul>
-              </li>
-              <li class="dropdown"><a href="#"><span>Development</span> <i class="bi bi-chevron-right"></i></a>
-                <ul>
-                  <li><a href="#">a) The story (include an interactive narrative using Twine)</a></li>
-                  <li><a href="#">b) Description of the interaction between the project and the users (include Interaction Diagram)</a></li>
-                  <li><a href="#">c) Development to reach the cognitive focus</a></li>
-                  <li><a href="#">d) Foreseen workflow (includes needed software, hardware, professionals)</a></li>
-                  <li><a href="#">e) Further development and maintenance issues</a></li>
-                </ul>
-              </li>
-              <li><a href="#team">Teams roles</a></li>
-              <li><a href="#">Bibliography</a></li>
-              <li class="dropdown"><a href="#"><span>Complementary Material for the Discussion</span> <i class="bi bi-chevron-right"></i></a>
-                <ul>
-                  <li><a href="#">3d object or scene (3D)</a></li>
-                  <li><a href="#"> Trailer (video)</a></li>
-                  <li><a href="#"> Audio (i.e. interviews of your potential users)</a></li>
-                </ul>
-              </li>
-            </ul>
-          </li-->
-          <li><a class="nav-link scrollto" href="">Services</a></li>
-          <li><a class="nav-link scrollto " href="#portfolio">Portfolio</a></li>
+          <!--li><a class="nav-link scrollto" href="">Services</a></li>
+          <li><a class="nav-link scrollto " href="#portfolio">Portfolio</a></li-->
           <li><a class="nav-link scrollto" href="stories.html#team">Team</a></li>
           <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
         </ul>
@@ -806,7 +761,7 @@
     <div class="container">
       <div>
         <p><strong>Wanted!</strong> is a project developed for the final exam of <emph>Digital Heritage and Multimedia</emph> course within the <a href="https://corsi.unibo.it/2cycle/DigitalHumanitiesKnowledge">DHDK Master's Degree</a>, Alma Mater Studiorum - Università di Bologna, a.y. 2020/2021. Texts and contents organization are released with a <a href="https://creativecommons.org/licenses/by-nc-sa/4.0/">CC BY-NC-SA 4.0 license</a>.</p>
-        <p><strong>Images comes .......</p>
+        <!--p><strong>Images comes .......</p-->
       </div>
       <div class="copyright">Website template &copy; Copyright <strong><span>Gp</span></strong>. All Rights Reserved</div>
       <div class="credits">
