--- a/index.html
+++ b/index.html
@@ -53,13 +53,13 @@
           <li><a class="nav-link scrollto" href="PWBD.html">Project Work Design Brief</a></li>
           <!--li><a class="nav-link scrollto" href="">Services</a></li>
           <li><a class="nav-link scrollto " href="#portfolio">Portfolio</a></li-->
-          <li><a class="nav-link scrollto" href="stories.html#team">Team</a></li>
+          <li><a class="nav-link scrollto" href="PWBD.html#team">Team</a></li>
           <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
 
-      <a href="stories.html" class="get-started-btn scrollto">The exhibit</a>
+      <a href="in_art.html" class="get-started-btn scrollto">The exhibit</a>
 
     </div>
   </header><!-- End Header -->
