--- a/in_art.html
+++ b/in_art.html
@@ -84,8 +84,7 @@ function off() {
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
-          <h2>SOME ICONIC STORIES</h2>
-
+          <h2>In Art Iconic Stories</h2>
           <hr>
         </div>
 
