--- a/portfolio_2.html
+++ b/portfolio_2.html
@@ -54,7 +54,7 @@
           <!--li><a class="nav-link scrollto" href="">Services</a></li>
           <li><a class="nav-link scrollto " href="#portfolio">Portfolio</a></li-->
           <li><a class="nav-link scrollto" href="PWBD.html#team">Team</a></li>
-          <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
+          <li><a class="nav-link scrollto" href="index.html#contact">Contact</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
@@ -89,7 +89,7 @@
         <div class="row gy-4">
 
           <div class="col-lg-8">
-            <div class="portfolio-details-slider swiper">
+            <div class="portfolio-details-slider"><!-- swiper-->
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
@@ -111,7 +111,7 @@
 
           <div class="col-lg-4">
             <div class="portfolio-info">
-              <h3>Gringo (project information=1 pagina per foto)</h3>
+              <h3>Luli</h3>
               <ul>
                 <li><strong>Name</strong>: Luli</li>
                 <li><strong>Type</strong>: dog</li>
@@ -127,7 +127,7 @@
               </ul>
             </div>
             <div class="portfolio-description">
-              <h2>Our memory (This is an example of portfolio detail)</h2>
+              <h2>Our memory</h2>
               <p>
                 Luli se perdiò ..... <!--span style="color:#008000; font-weight:bold;">green collar</span-->.</br>
                 <!--Autem ipsum nam porro corporis rerum. Quis eos dolorem eos itaque inventore commodi labore quia quia. Exercitationem repudiandae officiis neque suscipit non officia eaque itaque enim. Voluptatem officia accusantium nesciunt est omnis tempora consectetur dignissimos. Sequi nulla at esse enim cum deserunt eius.-->
