--- a/portfolio_2.html
+++ b/portfolio_2.html
@@ -89,7 +89,7 @@
         <div class="row gy-4">
 
           <div class="col-lg-8">
-            <div class="portfolio-details-slider"><!-- swiper-->
+            <div class="portfolio-details-slider swiper">
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
