--- a/index.html
+++ b/index.html
@@ -458,7 +458,7 @@
 
       </div>
 <!-- prova inserimento qui dati preliminari -->
-      <div class="container" data-aos="fade-up">
+      <div class="container portfolio" data-aos="fade-up">
 
         <div class="section-title">
           <h2>Your stories</h2>
