--- a/index.html
+++ b/index.html
@@ -458,10 +458,11 @@
 
       </div>
 <!-- prova inserimento qui dati preliminari -->
+<section id="preliminary_data" class="portfolio">
       <div class="container portfolio" data-aos="fade-up">
 
         <div class="section-title">
-          <h2>Your stories</h2>
+          <h2>Preliminary data sample</h2>
           <!--p>Check our Portfolio</p-->
         </div>
 
@@ -607,6 +608,7 @@
         </div>
 
       </div>
+  </section><!-- End Preliminary data Section --
 <!--fine prova-->
 
     </section><!-- End Counts Section -->
