--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
         <div class="col-xl-2 col-md-4">
           <div class="icon-box">
             <img src="assets/img/working.png" width="70%">
-            <h3><a href="#counts">Data</a></h3>
+            <h3><a href="#data">Data</a></h3>
           </div>
         </div>
       </div>
@@ -403,8 +403,8 @@
       </div>
     </section><!-- End Portfolio Section -->
 
-    <!-- ======= Counts Section ======= -->
-    <section id="counts" class="counts">
+    <!-- ======= Data Section ======= -->
+    <section id="data" class="counts">
       <div class="container" data-aos="fade-up">
 
         <div class="row no-gutters">
@@ -447,7 +447,7 @@
                   <div class="count-box">
                     <i class="bi bi-award"></i>
                     <span data-purecounter-start="0" data-purecounter-end="4.2" data-purecounter-duration="4" class="purecounter"></span>
-                    <p><strong>Overall rating evalution</strong> of the interactive experience</p>
+                    <p><strong>Overall rating evalution</strong> over 5 of the interactive experience</p>
                   </div>
                 </div>
           
