--- a/index.html
+++ b/index.html
@@ -608,9 +608,8 @@
         </div>
 
       </div>
-  </section><!-- End Preliminary data Section --
+  </section><!-- End Preliminary data Section -->
 <!--fine prova-->
-
     </section><!-- End Counts Section -->
 
     <!-- ======= Testimonials Section ======= -->
