--- a/index.html
+++ b/index.html
@@ -403,6 +403,20 @@
       </div>
     </section><!-- End Portfolio Section -->
 
+<!-- ======= Cta Section ======= -->
+    <section id="cta" class="cta">
+      <div class="container" data-aos="zoom-in">
+
+        <div class="text-center">
+          <h3>Share your story too!</h3>
+          <p>Let your human-pet familiary story be known! We really enjoy to collect and preserve your memories and build togheter a big archive of antispecistic relationships!</p>
+          <a class="cta-btn" href="#contact">Call To Action</a>
+        </div>
+
+      </div>
+    </section><!-- End Cta Section -->
+
+
     <!-- ======= Data Section ======= -->
     <section id="data" class="counts">
       <div class="container" data-aos="fade-up">
