--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
       </div>
     </section><!-- End Services Section -->
 
-    <!-- ======= Cta Section ======= -->
+    <!-- ======= Cta Section _ ORIGINAL =======>
     <section id="cta" class="cta">
       <div class="container" data-aos="zoom-in">
 
@@ -248,7 +248,7 @@
         </div>
 
       </div>
-    </section><!-- End Cta Section -->
+    </section><End Cta Section -->
 
     <!-- ======= Portfolio Section ======= -->
     <section id="your_stories" class="portfolio">
@@ -410,12 +410,12 @@
         <div class="text-center">
           <h3>Share your story too!</h3>
           <p>Let your human-pet familiary story be known! We really enjoy to collect and preserve your memories and build togheter a big archive of antispecistic relationships!</p>
-          <a class="cta-btn" href="#contact">Call To Action</a>
+          <a class="cta-btn" href="#share_form">Fill in the forma and share your story!</a>
         </div>
 
       </div>
-    </section><!-- End Cta Section -->
-
+    </section>
+<!-- End Cta Section -->
 
     <!-- ======= Data Section ======= -->
     <section id="data" class="counts">
@@ -471,13 +471,15 @@
         </div>
 
       </div>
-    </section><!-- End Counts Section -->
-<!-- prova inserimento qui dati preliminari -->
-<section id="preliminary_data" class="portfolio">
-      <div class="container portfolio" data-aos="fade-up">
+    </section>
+<!-- End Counts Section -->
+
+    <!-- ======= Preliminary data Section ======= -->
+    <section id="preliminary_data" class="portfolio">
+      <div class="container" data-aos="fade-up">
 
         <div class="section-title">
-          <h2>Preliminary data sample</h2>
+          <h2>Prel data</h2>
           <!--p>Check our Portfolio</p-->
         </div>
 
@@ -623,7 +625,8 @@
         </div>
 
       </div>
-  </section><!-- End Preliminary data Section -->
+    </section>
+<!-- End Preliminary data Section -->
 <!--fine prova-->
     <!-- ======= Testimonials Section ======= -->
     <section id="testimonials" class="testimonials">
@@ -832,7 +835,7 @@
 
           <div class="col-lg-8 mt-5 mt-lg-0">
 
-            <form action="forms/contact.php" method="post" role="form" class="php-email-form">
+            <form "forms/contact.php" method="post" role="form" class="php-email-form" id="share_form">
               <div class="row">
                 <div class="col-md-6 form-group">
                   <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" required>
