--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
       </div>
     </section><End Cta Section -->
 
-    <!-- ======= Portfolio Section ======= -->
+    <!-- ======= Portfolio Section =======>
     <section id="your_stories" class="portfolio">
       <div class="container" data-aos="fade-up">
 
@@ -401,7 +401,7 @@
         </div>
 
       </div>
-    </section><!-- End Portfolio Section -->
+    </section><End Portfolio Section -->
 
 <!-- ======= Cta Section ======= -->
     <section id="cta" class="cta">
