--- a/index.html
+++ b/index.html
@@ -57,12 +57,14 @@
           <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
-      </nav><!-- .navbar -->
-
+      </nav>
+      <!-- .navbar -->
+      
       <a href="in_art.html" class="get-started-btn scrollto">The exhibit</a>
 
     </div>
-  </header><!-- End Header -->
+  </header>
+  <!-- End Header -->
 
   <!-- ======= Hero Section ======= -->
   <section id="hero" class="d-flex align-items-center justify-content-center">
@@ -119,13 +121,12 @@
 
         <div class="row">
           <div class="col-lg-6 order-1 order-lg-2" data-aos="fade-left" data-aos-delay="100">
-            <img src="assets/img/about.jpg" class="img-fluid" alt="">
+            <img src="assets/img/about.jpg" class="img-fluid" alt="" width="100%">
           </div>
           <div class="col-lg-6 pt-4 pt-lg-0 order-2 order-lg-1 content" data-aos="fade-right" data-aos-delay="100">
             <h3>About</h3>
-            <!--p class="fst-italic"></p>
-            <h3>Titolo da definire</h3-->
-            <p><strong>Wanted!</strong> is a project inspired by a <a href="">corpus of pet lost advertisement photographs</a> collected over the years in various places.</p>
+            <!--p class="fst-italic"></p><h3>Titolo da definire</h3-->
+            <p><strong>Wanted!</strong> is a project inspired by a <a href="">corpus</a> of pet lost advertisement photographs collected over the years in various places.</p>
             <p> The fascination for the affective and memorial effect of these images prompted us to think about the creation of a virtual space that would allow the preservation of the memory of these beloved ones - most of them no longer found - through the telling and sharing of their stories, with the intent of arousing emotions such as memory, empathy, sympathy and socializing the pain of a loss or the joy of a happy ending.</br>
             At the same time, the project would also like to become a support tool in the search for the animal in the early stages of its disappearance, through the possibility of directly publishing the loss announcements accompanied by geolocation data.</br>
             Each user can have the option to upload and share their own story or simply link that of others.</br>
@@ -233,10 +234,11 @@
         </div>
 
       </div>
-    </section><!-- End Services Section -->
+    </section>
+<!-- End Services Section -->
 
-    <!-- ======= Cta Section _ ORIGINAL =======>
-    <section id="cta" class="cta">
+    <!-- ======= Cta Section _ ORIGINAL ======= -->
+    <!--section id="cta" class="cta">
       <div class="container" data-aos="zoom-in">
 
         <div class="text-center">
@@ -246,7 +248,8 @@
         </div>
 
       </div>
-    </section><End Cta Section -->
+    </section-->
+<!--End Cta Section -->
 
     <!-- ======= Portfolio Section ======= -->
     <!--section id="your_stories" class="portfolio">
@@ -254,7 +257,7 @@
 
         <div class="section-title">
           <h2>Your stories</h2>
-          <!--p>Check our Portfolio</p-->
+          <p>Check our Portfolio</p>
         </div>
 
         <div class="row" data-aos="fade-up" data-aos-delay="100">
@@ -399,7 +402,8 @@
         </div>
 
       </div>
-    </section--><!--End Portfolio Section -->
+    </section-->
+<!--End Portfolio Section -->
 
 <!-- ======= Cta Section ======= -->
     <section id="cta" class="cta">
@@ -478,7 +482,6 @@
 
         <div class="section-title">
           <h2>Prel data</h2>
-          <!--p>Check our Portfolio</p-->
         </div>
 
         <div class="row" data-aos="fade-up" data-aos-delay="100">
@@ -644,7 +647,7 @@
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
               </div>
-            </div><!-- End testimonial item -->
+            </div>
 
             <div class="swiper-slide">
               <div class="testimonial-item">
@@ -657,7 +660,7 @@
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
               </div>
-            </div><!-- End testimonial item -->
+            </div>
 
             <div class="swiper-slide">
               <div class="testimonial-item">
@@ -670,7 +673,7 @@
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
               </div>
-            </div><!-- End testimonial item -->
+            </div>
 
             <div class="swiper-slide">
               <div class="testimonial-item">
@@ -683,7 +686,7 @@
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
               </div>
-          </div><!-- End testimonial item -->
+          </div>
 
             <div class="swiper-slide">
               <div class="testimonial-item">
@@ -696,13 +699,14 @@
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
               </div>
-            </div><!-- End testimonial item -->
+            </div>
           </div>
           <div class="swiper-pagination"></div>
         </div>
 
       </div>
-    </section--><!-- End Testimonials Section -->
+    </section-->
+<!-- End Testimonials Section -->
 
     <!-- ======= Team Section ======= -->
     <!--section id="team" class="team">
@@ -790,7 +794,8 @@
         </div>
 
       </div>
-    </section--><!-- End Team Section -->
+    </section-->
+<!-- End Team Section -->
 
     <!-- ======= Contact Section ======= -->
     <section id="contact" class="contact">
@@ -819,16 +824,7 @@
                 <i class="bi bi-envelope"></i>
                 <h4>Email:</h4>
                 <p>wanted@wanted.com</p>
-              </div>
-
-              <div class="email">
-                <i class="bi bi-envelope"></i>
-                <h4>Email:</h4>
                 <p>alisia.zarbo@studio.unibo.it</p>
-              </div>
-              <div class="email">
-                <i class="bi bi-envelope"></i>
-                <h4>Email:</h4>
                 <p>enrica.zani@studio.unibo.it</p>
               </div>
               
@@ -843,7 +839,7 @@
           </div>
 
           <div class="col-lg-8 mt-5 mt-lg-0">
-            <p id="share_form">Share your story form</p>
+            <h3 id="share_form">Share your story form</h3>
             <form "forms/contact.php" method="post" role="form" class="php-email-form">
               <div class="row">
                 <div class="col-md-6 form-group">
