--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 
         <div class="row">
           <div class="col-lg-6 order-1 order-lg-2" data-aos="fade-left" data-aos-delay="100">
-            <img src="assets/img/about.jpg" class="img-fluid" alt="" width="100%">
+            <img src="assets/img/about.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-6 pt-4 pt-lg-0 order-2 order-lg-1 content" data-aos="fade-right" data-aos-delay="100">
             <h3>About</h3>
@@ -140,7 +140,7 @@
 <!-- End About Section -->  
 
     <!-- ======= Features Section ======= -->
-    <!--section id="features" class="features">
+    <section id="features" class="features">
       <div class="container" data-aos="fade-up">
 <h1>DEVELOPEMENT</h1>
 <br>
@@ -171,7 +171,8 @@
         </div>
 
       </div>
-    </section--><!-- End Features Section -->
+    </section>
+<!-- End Features Section -->
 
     <!-- ======= Services Section ======= -->
     <section id="services" class="services">
@@ -476,6 +477,20 @@
     </section>
 <!-- End Counts Section -->
 
+<!-- ======= 2nd Cta Section ======= -->
+    <section id="2cta" class="cta">
+      <div class="container" data-aos="zoom-in">
+
+        <div class="text-center">
+          <h3></h3>
+          <p></p>
+          <!--a class="cta-btn" href="#share_form">Fill in the forma and share your story!</a-->
+        </div>
+
+      </div>
+    </section>
+<!-- End Cta Section -->
+
     <!-- ======= Preliminary data Section ======= -->
     <section id="preliminary_data" class="portfolio">
       <div class="container" data-aos="fade-up">
@@ -629,6 +644,22 @@
     </section>
 <!-- End Preliminary data Section -->
 <!--fine prova-->
+
+
+<!-- ======= 3rdCta Section ======= -->
+    <section id="3cta" class="cta">
+      <div class="container" data-aos="zoom-in">
+
+        <div class="text-center">
+          <h3>Search for your pet</h3>
+          <p>We are creating an online interactive platform where uploading your lost pet sos: your data will be geolocated and other can help you in your pet retrieval</p>
+          <a class="cta-btn" href="#">Soon the new service will be available</a>
+        </div>
+
+      </div>
+    </section>
+<!-- End Cta Section -->
+
     <!-- ======= Testimonials Section ======= -->
     <!--section id="testimonials" class="testimonials">
       <div class="container" data-aos="zoom-in">
@@ -874,7 +905,8 @@
       </div>
     </section><!-- End Contact Section -->
 
-  </main><!-- End #main -->
+  </main>
+<!-- End #main -->
 
   <!-- ======= Footer ======= -->
   <footer id="footer">
