--- a/index.html
+++ b/index.html
@@ -496,7 +496,7 @@
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
-          <h2>Prel data</h2>
+          <h3>Preliminary data</h3>
         </div>
 
         <div class="row" data-aos="fade-up" data-aos-delay="100">
@@ -854,9 +854,9 @@
               <div class="email">
                 <i class="bi bi-envelope"></i>
                 <h4>Email:</h4>
-                <p>wanted@wanted.com</p>
-                <p>alisia.zarbo@studio.unibo.it</p>
-                <p>enrica.zani@studio.unibo.it</p>
+                <p><a mailto:wanted@wanted.com<wanted@wanted.com</a></p>
+                <p><a mailto:alisia.zarbo@studio.unibo.it>alisia.zarbo@studio.unibo.it</a></p>
+                <p><a mailto:enrica.zani@studio.unibo.it>enrica.zani@studio.unibo.it</a></p>
               </div>
               
               <!--div class="phone">
